--- a/statistical_learning.Rmd
+++ b/statistical_learning.Rmd
@@ -76,3 +76,34 @@ lasso_fit %>%
   
 ```
 
+## Cluster pokemons
+
+```{r}
+pokemon_df = 
+  read_csv("./data/pokemon.csv") %>% 
+  janitor::clean_names() %>% 
+  select(speed, hp)
+```
+
+Take a quick look
+```{r}
+pokemon_df %>% 
+  ggplot(aes(x = hp, y = speed)) +
+  geom_point()
+```
+
+Use K-means to identify clusters
+
+```{r}
+kmeans_fit = 
+  kmeans(x = pokemon_df, centers = 3)
+```
+
+```{r}
+pokemon_df %>% 
+  broom::augment(kmeans_fit, .) %>% 
+  ggplot(aes(x = hp, y = speed, color = .cluster)) +
+  geom_point()
+```
+
+_categorical variables always not use clustering_
